syntax = "proto3";

package promotion;
option go_package = "./promotion";

// 营销 RPC 服务 — 供 Order 调用
service PromotionRpc {
  // 计算优惠价格
  rpc CalculateDiscount(CalculateDiscountReq) returns (CalculateDiscountResp);
  // 核销优惠券
  rpc UseCoupon(UseCouponReq) returns (UseCouponResp);
}

message CalculateDiscountReq {
  int64  coupon_id    = 1;
  double total_amount = 2;
}

message CalculateDiscountResp {
  double discount_amount = 1;
  double pay_amount      = 2;
  bool   valid           = 3;
}

message UseCouponReq {
  int64  user_id       = 1;
  int64  coupon_id     = 2;
  string used_order_id = 3;
}

message UseCouponResp {
  bool success = 1;
}
